Bug fix for text that hides after load on safari

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -130,6 +130,7 @@ h2{
 	display: inline;
 	-webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 	animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	-webkit-backface-visibility: hidden;
   
 	@-webkit-keyframes tracking-in-contract {
 	  0% {
